# zain

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: zain.yaml
src/nirvana_coding_agent/: __init__.py  agent.py  cli.py  config.py  filesystem_paths.py  memory.py  paths.py  planning.py
