[project]
name = "zain"
version = "0.1.0"
description = "Terminal coding agent with planning, memory, web search, and workspace-scoped tools"
readme = "README.md"
authors = [
    { name = "Mohammad Shaheer Zaman", email = "mohammad.shaheer.zaman@turing.com" }
]
keywords = ["agent", "cli", "langchain", "coding", "developer-tools", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.4.4",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "langchain-tavily>=0.2.17",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[project.scripts]
zain = "nirvana_coding_agent:main"

[project.urls]
Homepage = "https://github.com/shaheerzaman/zain"
Repository = "https://github.com/shaheerzaman/zain"
Issues = "https://github.com/shaheerzaman/zain/issues"

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "nirvana_coding_agent"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
